--- a/src/main/resources/templates/skills/view.html
+++ b/src/main/resources/templates/skills/view.html
@@ -10,9 +10,9 @@
 <div class="job-listing">
     <p th:text="${'Name: ' + skill.name}"></p>
     <p th:text="${'Description: ' + skill.description}"></p>
-    <p> Jobs:
+    <p> Skills:
         <ul>
-            <li th:each="job : ${skill.jobs}">
+                <li th:each="job : ${skill.jobs}">
                 <a th:href="@{'/view/' + ${job.id}}" th:text="${job.name}"></a>
             </li>
         </ul>
